kubernetes-networks/dashboard/web-ingress-dash.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: dashboard
  namespace: kubernetes-dashboard  
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/dashboard)$ $1/ redirect;
spec:
  rules:
    - http:
        paths:
          - path: /dashboard(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
